<resources>
    <string name="app_name">Recipe App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cook_app">Cook App</string>
    <string name="recipe_app">Recipe App</string>
    <string name="singout">SingOut</string>
    <string name="creator">Creator</string>
    <string name="menu">menu</string>
    <string name="looking_for_ricpe">Looking For Ricpe?</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="share_icon">Share Icon</string>
    <string name="search">ٍٍSearch</string>
    <string name="write_your_passsword">Write Your passsword</string>
    <string name="confirm">Confirm</string>
    <string name="update_email">Update Email</string>
    <string name="your_email">your email:</string>
    <string name="write_the_new_email">Write The New Email</string>
    <string name="write_your_new_email">Write Your New Email</string>
    <string name="your_password">Your Password:</string>
    <string name="write_your_new_password">Write Your New Password</string>


</resources>