<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.updateEmailFragment">

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/your_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        style="@style/CustomTextStyle"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/email_label"
        app:layout_constraintTop_toBottomOf="@id/email_label"
        android:text="youssef@gmail.commmmmm"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:id="@+id/linear_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/searchsahpe"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
       >

        <EditText
            android:id="@+id/Email_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:background="@drawable/shape2"
            android:hint="@string/write_your_new_email"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="30sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_password"
        app:layout_constraintStart_toStartOf="@id/email_label"
        app:layout_constraintTop_toBottomOf="@id/linear_email"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        style="@style/CustomTextStyle"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/password_label"
        app:layout_constraintTop_toBottomOf="@id/password_label"
        android:text="541651616"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:id="@+id/linear_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/searchsahpe"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        >

        <EditText
            android:id="@+id/password_box2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:background="@drawable/shape2"
            android:hint="@string/write_your_new_password"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="25sp" />
    </LinearLayout>
    <Button
        android:id="@+id/b_Confirmend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="#9A7ECA"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/black"
        style="@style/CustomTextStyle"
        app:layout_constraintTop_toBottomOf="@id/linear_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
